[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medsegdiff-v2"
version = "0.1.0"
description = "Medical Segmentation Diffusion Model V2"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "nibabel>=4.0.0",
    "batchgenerators>=0.21",
    "numpy>=1.24",
    "pyyaml>=6.0",
]
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
extend-ignore = "E203, W503"
